<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_navigation.xml"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.instagram.video.downloader.ui.home.HomeFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.instagram.video.downloader.ui.home.explore.ExploreContainerFragment"
        android:label="@string/title_explore" />

    <fragment
        android:id="@+id/navigation_profiles"
        android:name="com.instagram.video.downloader.ui.home.profile.ProfileFragment"
        android:label="@string/title_profiles"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.instagram.video.downloader.ui.home.settings.SettingsFragment"
        android:label="@string/title_settings"/>

</navigation>