<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_theme_surface"
        android:minHeight="650dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/choose_items_to_download"
                android:textSize="17sp"
                android:textStyle="bold" />


            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="6dp"
                android:background="@color/md_theme_scrim_mediumContrast" />


            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/select_all"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:minHeight="300dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:itemCount="5"
                tools:listitem="@layout/highlight_to_download_item" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/download"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/download"
                android:textSize="18sp"
                app:cornerRadius="4dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>